WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268062
REGRESSION(
273240@main
): Caused unnecessary port accumulation and IPC message send rejection
https://bugs.webkit.org/show_bug.cgi?id=268062
Summary
REGRESSION(273240@main): Caused unnecessary port accumulation and IPC message...
WebKit Commit Bot
Reported
2024-01-24 22:21:44 PST
https://commits.webkit.org/273240@main
introduced a regression: Caused unnecessary port accumulation and IPC message send rejection This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 273240@main
(21.10 KB, patch)
2024-01-24 22:21 PST
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-01-24 22:21:49 PST
Created
attachment 469542
[details]
REVERT of
273240@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Tim Horton
Comment 2
2024-01-24 22:22:40 PST
<
rdar://121476369
>
EWS
Comment 3
2024-01-24 22:48:52 PST
Committed
273477@main
(5bde3ab22396): <
https://commits.webkit.org/273477@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469542
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug