Cherry-pick 5bde3ab22396. rdar://121476369

Unreviewed, reverting 273240@main.
    https://bugs.webkit.org/show_bug.cgi?id=268062

    Caused unnecessary port accumulation and IPC message send rejection

    Reverted changeset:

    "Dynamic Content Scaling resource cache cannot cache images between layers"
    https://bugs.webkit.org/show_bug.cgi?id=245920
    https://commits.webkit.org/273240@main

    Canonical link: https://commits.webkit.org/273477@main

Canonical link: https://commits.webkit.org/272448.371@safari-7618-branch